; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_thread.c_thread__fprintf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_thread.c_thread__fprintf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32, i8*, i32 }

@.str = private unnamed_addr constant [14 x i8] c"Thread %d %s\0A\00", align 1
@verbose = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.thread*, i32*)* @thread__fprintf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @thread__fprintf(%struct.thread* %0, i32* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca i32*, align 8
  store %struct.thread* %0, %struct.thread** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = load %struct.thread*, %struct.thread** %3, align 8
  %7 = getelementptr inbounds %struct.thread, %struct.thread* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load %struct.thread*, %struct.thread** %3, align 8
  %10 = getelementptr inbounds %struct.thread, %struct.thread* %9, i32 0, i32 1
  %11 = load i8*, i8** %10, align 8
  %12 = call i64 @fprintf(i32* %5, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %8, i8* %11)
  %13 = load %struct.thread*, %struct.thread** %3, align 8
  %14 = getelementptr inbounds %struct.thread, %struct.thread* %13, i32 0, i32 2
  %15 = load i32, i32* @verbose, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = call i64 @map_groups__fprintf(i32* %14, i32 %15, i32* %16)
  %18 = add i64 %12, %17
  ret i64 %18
}

declare dso_local i64 @fprintf(i32*, i8*, i32, i8*) #1

declare dso_local i64 @map_groups__fprintf(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
